Stop wrapping control buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,6 @@ h1 {
 .controls {
     margin: 20px auto;
     text-align: center;
-    width: 20%;
 }
 
 .controls button {
